--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   	<title>Page Title :: Site Title</title>
   	<meta name="description" content="" />
-  	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+  	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta name="author" href="" />
 
 	<!--[if lt IE 9]>
