Added srcset example to index page

--- a/index.html
+++ b/index.html
@@ -78,7 +78,13 @@
 			<p>Curabitur sem lectus, elementum ac condimentum sed, maximus ut dolor. <strong>Phasellus vitae</strong> viverra mauris. Etiam porttitor odio lorem, quis porta mauris lobortis non. Aenean eleifend elit efficitur ligula sollicitudin, vel congue dolor commodo. Donec scelerisque urna <a href="">quis nulla</a> rhoncus gravida.</p>
 
 			<div class="media--large">
-				<!--<img src="http://placehold.it/1000x400" alt="">-->
+				<img srcset="http://placehold.it/2000x1000 2000w,
+			    		http://placehold.it/1000x500 1000w,
+			            http://placehold.it/500x250 500w,
+			            http://placehold.it/250x125 250" 
+			        sizes="100vw"
+			        src="http://placehold.it/250x125" 
+			        alt="placeholder image">
 			</div>
 			
 			<label for="name">Name: <span class="label__note">optional</span></label>
