Created v1 of carousel.js

--- a/root/index.html
+++ b/root/index.html
@@ -157,6 +157,47 @@
 			<p>Phasellus laoreet lorem vel dolor tempus vehicula. Quisque ut dolor gravida, placerat libero vel, euismod. Quam temere in vitiis, legem sancimus haerentia. Ullamco laboris nisi ut aliquid ex ea commodi consequat. Curabitur blandit tempus ardua ridiculus sed magna. Quam diu etiam furor iste tuus nos eludet?</p>
 			<p>Quam diu etiam furor iste tuus nos eludet? Nec dubitamus multa iter quae et nos invenerat. Quam diu etiam furor iste tuus nos eludet? Paullum deliquit, ponderibus modulisque suis ratio utitur. Magna pars studiorum, prodita quaerimus. Me non paenitet nullum festiviorem excogitasse ad hoc. Tityre, tu patulae recubans sub tegmine fagi  dolor. Quisque ut dolor gravida, placerat libero vel, euismod. Praeterea iter est quasdam res quas ex communi.</p>
 
+			<section class="carousel section js-carousel">
+				<div class="carousel__list js-carousel-list">
+					<article class="carousel__item js-carousel-item" data-label="Slide 1">
+						<img data-srcset="http://placehold.it/1600x800 1600w,
+					    		http://placehold.it/800x400 800w,
+					            http://placehold.it/400x200 400w,
+					            http://placehold.it/200x100 200w" 
+					        sizes="100vw"
+					        src="http://placehold.it/200x100" 
+					        alt="placeholder image"
+					        class="lazyload">
+					</article>
+
+					<article class="carousel__item js-carousel-item" data-label="Slide 2">
+						<img data-srcset="http://placehold.it/1600x800 1600w,
+					    		http://placehold.it/800x400 800w,
+					            http://placehold.it/400x200 400w,
+					            http://placehold.it/200x100 200w" 
+					        sizes="100vw"
+					        src="http://placehold.it/200x100" 
+					        alt="placeholder image"
+					        class="lazyload">
+					</article>
+
+					<article class="carousel__item js-carousel-item" data-label="Slide 3">
+						<img data-srcset="http://placehold.it/1600x800 1600w,
+					    		http://placehold.it/800x400 800w,
+					            http://placehold.it/400x200 400w,
+					            http://placehold.it/200x100 200w" 
+					        sizes="100vw"
+					        src="http://placehold.it/200x100" 
+					        alt="placeholder image"
+					        class="lazyload">
+					</article>
+				</div>
+			</section>
+
+			<p>Quae vero auctorem tractata ab fiducia dicuntur. Unam incolunt Belgae, aliam Aquitani, tertiam. Morbi odio eros, volutpat ut pharetra vitae, lobortis sed nibh. Ullamco laboris nisi ut aliquid ex ea commodi consequat. Pellentesque habitant morbi tristique senectus et netus. Idque Caesaris facere voluntate liceret: sese habere. Salutantibus vitae elit libero, a pharetra augue. Quam diu etiam furor iste tuus nos eludet? Magna pars studiorum, prodita quaerimus.</p>
+			<p>Phasellus laoreet lorem vel dolor tempus vehicula. Quisque ut dolor gravida, placerat libero vel, euismod. Quam temere in vitiis, legem sancimus haerentia. Ullamco laboris nisi ut aliquid ex ea commodi consequat. Curabitur blandit tempus ardua ridiculus sed magna. Quam diu etiam furor iste tuus nos eludet?</p>
+			<p>Quam diu etiam furor iste tuus nos eludet? Nec dubitamus multa iter quae et nos invenerat. Quam diu etiam furor iste tuus nos eludet? Paullum deliquit, ponderibus modulisque suis ratio utitur. Magna pars studiorum, prodita quaerimus. Me non paenitet nullum festiviorem excogitasse ad hoc. Tityre, tu patulae recubans sub tegmine fagi  dolor. Quisque ut dolor gravida, placerat libero vel, euismod. Praeterea iter est quasdam res quas ex communi.</p>
+
 			<label for="name">Name: <span class="label__note">optional</span></label>
 			<input type="text" class="input" id="name">
 
