Added new name spaces to classes

--- a/root/index.html
+++ b/root/index.html
@@ -58,14 +58,14 @@
 	<meta name="twitter:site" content="@geckotree" />
 	<meta name="twitter:creator" content="@geckotree" />
 </head>
-<body class="page">
+<body class="o-page">
 
-	<header class="page__header" role="banner">
+	<header class="o-page__header" role="banner">
 		
 	</header>
 
-	<main class="page__content" role="main">
-		<div class="section wrap wrap--large">
+	<main class="o-page__content" role="main">
+		<div class="o-section o-wrap o-wrap--large">
 			<h1>Morbi odio eros, volutpat.</h1>
 			<h2>Pellentesque habitant morbi tristique senectus et netus.</h2>
 
@@ -103,7 +103,7 @@
 
 			<h2>Nihil hic munitissimus habendi senatus locus, nihil horum?</h2>
 
-			<div class="media media--right media--video">
+			<div class="o-media o-media--right o-media--video">
 				<iframe width="560" height="315" data-src="http://www.youtube.com/embed/xUebb6EyqIs" class="lazyload" frameborder="0" allowfullscreen></iframe>
 			</div>
 
@@ -113,7 +113,7 @@
 			<p>Ut enim ad minim veniam, quis nostrud exercitation. Hi omnes lingua, institutis, legibus inter se differunt. Sed haec quis possit intrepidus aestimare tellus. Excepteur sint obcaecat cupiditat non proident culpa. Salutantibus vitae elit libero, a pharetra augue. Me non paenitet nullum festiviorem excogitasse ad hoc.</p>
 			<p>A communi observantia non est recedendum. Quid securi etiam tamquam eu fugiat nulla pariatur. Prima luce, cum quibus mons aliud  consensu ab eo. Pellentesque habitant morbi tristique senectus et netus. Prima luce, cum quibus mons aliud  consensu ab eo. Qui ipsorum lingua Celtae, nostra Galli appellantur. A communi observantia non est recedendum. Magna pars studiorum, prodita quaerimus. Etiam habebis sem dicantur magna mollis euismod. Idque Caesaris facere voluntate liceret: sese habere.</p>
 
-			<div class="table table--stacked">
+			<div class="c-table c-table--stacked">
 				<table>
 					<thead>
 						<tr>
@@ -142,7 +142,7 @@
 				</table>
 			</div>
 
-			<div class="media media--large">
+			<div class="o-media o-media--large">
 				<img data-srcset="http://placehold.it/2000x1000 2000w,
 			    		http://placehold.it/1000x500 1000w,
 			            http://placehold.it/500x250 500w,
@@ -157,9 +157,9 @@
 			<p>Phasellus laoreet lorem vel dolor tempus vehicula. Quisque ut dolor gravida, placerat libero vel, euismod. Quam temere in vitiis, legem sancimus haerentia. Ullamco laboris nisi ut aliquid ex ea commodi consequat. Curabitur blandit tempus ardua ridiculus sed magna. Quam diu etiam furor iste tuus nos eludet?</p>
 			<p>Quam diu etiam furor iste tuus nos eludet? Nec dubitamus multa iter quae et nos invenerat. Quam diu etiam furor iste tuus nos eludet? Paullum deliquit, ponderibus modulisque suis ratio utitur. Magna pars studiorum, prodita quaerimus. Me non paenitet nullum festiviorem excogitasse ad hoc. Tityre, tu patulae recubans sub tegmine fagi  dolor. Quisque ut dolor gravida, placerat libero vel, euismod. Praeterea iter est quasdam res quas ex communi.</p>
 
-			<section class="carousel section js-carousel">
-				<div class="carousel__list js-carousel-list">
-					<article class="carousel__item js-carousel-item" data-label="Slide 1">
+			<section class="c-carousel o-section js-carousel">
+				<div class="c-carousel__list js-carousel-list">
+					<article class="c-carousel__item js-carousel-item" data-label="Slide 1">
 						<img data-srcset="http://placehold.it/1600x800 1600w,
 					    		http://placehold.it/800x400 800w,
 					            http://placehold.it/400x200 400w,
@@ -170,7 +170,7 @@
 					        class="lazyload">
 					</article>
 
-					<article class="carousel__item js-carousel-item" data-label="Slide 2">
+					<article class="c-carousel__item js-carousel-item" data-label="Slide 2">
 						<img data-srcset="http://placehold.it/1600x800 1600w,
 					    		http://placehold.it/800x400 800w,
 					            http://placehold.it/400x200 400w,
@@ -181,7 +181,7 @@
 					        class="lazyload">
 					</article>
 
-					<article class="carousel__item js-carousel-item" data-label="Slide 3">
+					<article class="c-carousel__item js-carousel-item" data-label="Slide 3">
 						<img data-srcset="http://placehold.it/1600x800 1600w,
 					    		http://placehold.it/800x400 800w,
 					            http://placehold.it/400x200 400w,
@@ -219,7 +219,7 @@
 		</div>
 	</main>
 
-	<footer class="page__footer" role="contentinfo">
+	<footer class="o-page__footer" role="contentinfo">
 		
 	</footer>
 	
