--- a/dev/index.html
+++ b/dev/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
-<!--[if lte IE 9]> <html lang="en" class="no-mustard no-js lt-ie10"> <![endif]-->
-<!--[if gt IE 9]><!--> <html lang="en" class="no-mustard no-js"> <!—<![endif]-->
+<!--[if lte IE 9]> <html lang="en" class="no-enhance no-js lt-ie10"> <![endif]-->
+<!--[if gt IE 9]><!--> <html lang="en" class="no-enhance no-js"> <!—<![endif]-->
 <head>
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
