added fast click to project

--- a/dev/index.html
+++ b/dev/index.html
@@ -55,6 +55,7 @@
 	<body class="o-page">
 		<header class="o-page__header" role="banner">
 			<!-- @note header content -->
+			<a href="#">click</a>
 		</header>
 
 		<main class="o-page__content" role="main">
@@ -67,6 +68,7 @@
 			<!-- @note footer content -->
 		</footer>
 		
+		<!-- @todo load modernizr -->
 		<script src="assets/build/js/main.js"></script>
 	</body>
 </html>
