added replace to watch task and started new style guide setup

--- a/dev/index.html
+++ b/dev/index.html
@@ -26,33 +26,25 @@
 	    <meta name="theme-color" content="#57B275">
 
 	    <!-- Open graph - http://ogp.me -->
-		<meta property="og:title" content="">
-		<meta property="og:description" content="">
-		<meta property="og:url" content="">
-		<meta property="og:image" content="/assets/img/brand-icons/apple-152.png">
+		<meta property="og:title" content="" />
+		<meta property="og:description" content="" />
+		<meta property="og:url" content="" />
+		<meta property="og:image" content="/assets/img/brand-icons/apple-152.png" />
 
 		<!-- Twitter card - https://dev.twitter.com/docs/cards/markup-reference -->
-		<meta name="twitter:card" content="summary">
-		<meta name="twitter:title" content="">
-		<meta name="twitter:description" content="">
-		<meta name="twitter:url" content="">
-		<meta name="twitter:image" content="/assets/img/brand-icons/apple-152.png">
-		<meta name="twitter:site" content="@">
-		<meta name="twitter:creator" content="@">
+		<meta name="twitter:card" content="summary" />
+		<meta name="twitter:title" content="" />
+		<meta name="twitter:description" content="" />
+		<meta name="twitter:url" content="" />
+		<meta name="twitter:image" content="/assets/img/brand-icons/apple-152.png" />
+		<meta name="twitter:site" content="@" />
+		<meta name="twitter:creator" content="@" />
 
 	    <!-- Font loading -->
 		<script>function loadFont(a,b,c){function d(){if(!window.FontFace)return!1;var a=new FontFace("t",'url("data:application/font-woff2,") format("woff2")',{});return a.load(),"loading"===a.status}var e=navigator.userAgent,f=!window.addEventListener||e.match(/(Android (2|3|4.0|4.1|4.2|4.3))|(Opera (Mini|Mobi))/)&&!e.match(/Chrome/);if(!f){var g={};try{g=localStorage||{}}catch(h){}var i="x-font-"+a,j=i+"url",k=i+"css",l=g[j],m=g[k],n=document.createElement("style");if(n.rel="stylesheet",document.head.appendChild(n),!m||l!==b&&l!==c){var o=c&&d()?c:b,p=new XMLHttpRequest;p.open("GET",o),p.onload=function(){p.status>=200&&p.status<400&&(g[j]=o,g[k]=n.textContent=p.responseText)},p.send()}else n.textContent=m}}loadFont("fontname","assets/build/css/fonts-woff.css","assets/build/css/fonts-woff2.css");</script>
 
 	    <!--[if gt IE 8]><!-->
-			<style type="text/css">
-a,body,div,footer,header,html{border:0;font:inherit;margin:0;padding:0;text-decoration:none;vertical-align:baseline}footer,header{display:block}*{box-sizing:border-box;outline:0;-webkit-tap-highlight-color:transparent}html{font-size:62.5%;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{color:#000;font-family:Arial,Helvetica,Geneva,sans-serif;font-size:1.8rem;-webkit-font-feature-settings:'liga','kern';font-feature-settings:'liga','kern';-webkit-font-kerning:normal;font-kerning:normal;line-height:1.4em}body{font-size:1.8em}::selection{background:#9dd2ae}::-moz-selection{background:#9dd2ae}a{color:#57b275;transition:color .3s ease}::-webkit-input-placeholder{color:#ccc}:-moz-placeholder{color:#ccc}::-moz-placeholder{color:#ccc}:-ms-input-placeholder{color:#ccc}html{height:100%}.o-page{background:#fff;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;min-height:100%}.o-page__content{-webkit-flex:1 1 auto;-ms-flex:1 1 auto;flex:1 1 auto;width:100%}.o-wrap{margin-left:auto;margin-right:auto;padding-left:2rem;padding-right:2rem}.o-wrap--large{max-width:92rem}.o-section{padding-bottom:4rem;padding-top:4rem}@media only screen and (min-width:800px){body{font-size:2rem}body{font-size:2em}.o-section{padding-bottom:8rem;padding-top:8rem}}@media (-webkit-min-device-(min-resolution:144dppx){p{letter-spacing:.01em;word-spacing:.01em}}@media only screen and (min-width:500px){.o-wrap{padding-left:4rem;padding-right:4rem}.o-section{padding-bottom:6rem;padding-top:6rem}}
-</style>
-<script>
-(function(u){function loadCSS(e,t,n){"use strict";function r(){for(var t,i=0;i<d.length;i++)d[i].href&&d[i].href.indexOf(e)>-1&&(t=!0);t?o.media=n||"all":setTimeout(r)}var o=window.document.createElement("link"),i=t||window.document.getElementsByTagName("script")[0],d=window.document.styleSheets;return o.rel="stylesheet",o.href=e,o.media="only x",i.parentNode.insertBefore(o,i),r(),o}for(var i in u){loadCSS(u[i]);}}(['assets/build/css/style.css']));
-</script>
-<noscript>
-<link rel="stylesheet" href="assets/build/css/style.css">
-</noscript>
+			<link rel="stylesheet" href="assets/build/css/style.css">
 		<!--<![endif]-->
 
 	    <!--[if lt IE 9]>
@@ -63,7 +55,6 @@ a,body,div,footer,header,html{border:0;font:inherit;margin:0;padding:0;text-deco
 	<body class="o-page">
 		<header class="o-page__header" role="banner">
 			<!-- @note header content -->
-			<a href="#" class="button button--primary">I am a link</a>
 		</header>
 
 		<main class="o-page__content" role="main">
@@ -76,8 +67,8 @@ a,body,div,footer,header,html{border:0;font:inherit;margin:0;padding:0;text-deco
 			<!-- @note footer content -->
 		</footer>
 		
-		<svg xmlns="http://www.w3.org/2000/svg">
-		<script src="assets/build/js/main.js">
+		<svg xmlns="http://www.w3.org/2000/svg"/>
+		<script src="assets/build/js/main.js"></script>
 		<script>!function(a,b,c,d,e,f,g){a.GoogleAnalyticsObject=e,a[e]=a[e]||function(){(a[e].q=a[e].q||[]).push(arguments)},a[e].l=1*new Date,f=b.createElement(c),g=b.getElementsByTagName(c)[0],f.async=1,f.src=d,g.parentNode.insertBefore(f,g)}(window,document,"script","//www.google-analytics.com/analytics.js","ga"),ga("create","UA-XXXXX-X","auto"),ga("send","pageview");</script>
-	</svg></body>
+	</body>
 </html>
