added new styleguide

--- a/dev/index.html
+++ b/dev/index.html
@@ -7,7 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="">
 		<meta name="author" href="">
-		<title>Page Title :: Site Title</title>
+		<title>Page Title - Site Title</title>
 
 		<!-- Add to homescreen for Chrome on Android -->
     	<meta name="mobile-web-app-capable" content="yes">
@@ -55,6 +55,15 @@
 	<body class="o-page">
 		<header class="o-page__header" role="banner">
 			<!-- @note header content -->
+			<h1 class="tera">moo</h1>
+			<h1 class="giga">moo</h1>
+			<h1 class="mega">moo</h1>
+			<h1>moo</h1>
+			<h2>moo</h2>
+			<h3>moo</h3>
+			<h4>moo</h4>
+			<h5>moo</h5>
+			<h6>moo</h6>
 		</header>
 
 		<main class="o-page__content" role="main">
